fixed the link breaking for the artist songs page and messed around with some colors for the dark mode

--- a/src/main.css
+++ b/src/main.css
@@ -166,6 +166,9 @@ h3 {
   .dark-mode h1 {
 	color: #f45b00;
   }
+  .dark-mode h1 a:hover {
+	color: #A429A6;
+  }
 /*Css Variables*/
   .dark-mode h2 {
 	color :#dd2afb;
